r557
----
- Fixed bugs in BlockIterator
- Updated LinAlg to give correct Q and R matrices from QR factorization
- Updated LinAlg to implement QR factorization updates (not working)
- Matrix multiplication mechanics now changed to be more abstract (underlying
  arithmetic still done via BLAS)
- Added triangular solve to CBLAS
- Active-set QP solver now faster

r556
----
- Significant updates to optimization code
- Added iterators for block matrix code

r555
----
- Fixed bug in computing real event times

r554
----
- Added "true" time to events for proper processing

r553
----
- Fixed issues with Zeno points and simplified Zeno point handling mechanism

r552
----
- Altered Zeno point handling mechanism and removed semi-implicit integration
- Fixed Runge-Kutta-Fehlberg integrator

r551
----
- Bugfixes to the bugfixes to the previous bugfix (should now be working)

r550
----
- Bugfixes to the previous bugfix (still broken)

r549
----
- Major bugfix: event checking should now work properly independent of
  integrator type

r548
----
- Geometric primitives no longer report intersection if a point is
  interpenetrating (but on its way out of the primitive)

r547
----
- Fixed dynamics bugs for multi-branch bodies in independent coordinates

r546
----
- Fixed build bug with Optimization.cpp when built using OMP

r545
----
- Bugfixes to CRBAlgorithm for floating bases

r544
----
- Fixed bug in CRBAlgorithm - inertias were not being computed properly

r543
----
- Fixed bug in CRBAlgorithm inertia matrix inverse call from RCArticulatedBody

r542
----
- Added option to build Moby as threadsafe and to simplify openmp support

r541
----
- Fixed bug in PSDeformableBody for computing contact events

r540
----
- DeformableBody should now be more efficient (simpler and likely bugfixed too)

r539
----
- Modifications to parallelized version of O(n^2) inversion

r538
----
- Fixed bug in loading PSDeformableBody objects from XML

r537
----